<resources>
    <string name="app_name">Utrun</string>

    <string name="titles">
        <item name="android:textColor">@color/black</item>
        <item name="android:textSize">38sp</item>
        <item name="android:textStyle">bold</item>
    </string>

    <string name="body_content">
        <item name="android:textColor">@color/Davy_grey</item>
        <item name="android:textSize">22sp</item>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search">Search</string>
    <string name="offers">Offers</string>
    <string name="inbox">Inbox</string>
    <string name="outgoing">OutGoing</string>
    <string name="GoogleMapsApiKey">AIzaSyA5qBmt7CN2feoI2QGucCgFPDNNrf4ZlNM</string>

    <string name="profile_picture">Profile Picture</string>
    <string name="change_picture">Change Picture</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="add_task">imageButton</string>
</resources>